# django-celery-stack

./: .env.dist  LICENSE  MANIFEST.in  README.md  README.rst  README.zh.md  pyproject.toml  requirements.txt  setup.py
django_celery_stack/: apps.py  managers.py  tasks.py  urls.py  views.py
django_celery_stack/admin/: __init__.py  customTaskTesult.py  registeredTask.py  taskResult.py  taskStates.py  taskchain.py
django_celery_stack/backends/: __init__.py  database.py
django_celery_stack/locale/zh_Hans/LC_MESSAGES/: django.po
django_celery_stack/migrations/: 0001_initial.py
django_celery_stack/models/: __init__.py
middlewares/: __init__.py
proj/: __init__.py  celery.py  services.py  settings.py  simpleUISettings.py  suit_settings.py  test.py  urls.py
